--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -83,7 +83,6 @@
 
 				
 
-
 				<!--
 ==================================================================================================================
 ==================================================================================================================
@@ -120,6 +119,22 @@
 						</ol>
 					</div>
  				</section>
+
+				<section>
+					<div class="small left">
+						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html" target="_blank">here</a>.<br/>
+							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/RISE%20editions.pdf" target="_blank">here</a>.</p>
+							<p>
+						<b>Attention!</b>
+						<br/>
+						The presentation in HTML embeds many websites.
+						It takes sometime to load them all, some of them may not be available or blocked by your browser for security reasons.
+						When the content is not loaded yet or blocked, a blank slide will be displayed: follow the link in the previous slides to arrive to the same content. You can also disable the browser protection
+						(on this page only) and the content should appear (at least in Firefox).
+					</p>
+					<p>The PDF export does not embed websites, only includes links to them.</p>
+				</div>
+				</section>
 
 
 
