--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -123,7 +123,7 @@
 				<section>
 					<div class="small left">
 						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html" target="_blank">here</a>.<br/>
-							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/RISE%20editions.pdf" target="_blank">here</a>.</p>
+							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/RISE_editions.pdf" target="_blank">here</a>.</p>
 							<p>
 						<b>Attention!</b>
 						<br/>
