--- a/talks/20220401_editions_crashCourse/teiIntro.html
+++ b/talks/20220401_editions_crashCourse/teiIntro.html
@@ -85,6 +85,13 @@
 					</ol>
 				</section>
 
+				<section>
+					<div class="small left">
+						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html" target="_blank">here</a>.<br/>
+							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/teiIntro.pdf" target="_blank">here</a>.</p>
+							<p>
+				</div>
+
 
 
 				<section data-background-color="#a5d7d2"> 
