--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -891,9 +891,9 @@ FAIR--></div>
 				<section>
 					Thank you.<br/><br/>
 					<div class="left small">
-						<span>List of <a href="biblio/worksCited.pdf">works cited</a>.</span>
+						<span>List of <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/biblio/worksCited.pdf">works cited</a>.</span>
 						<br/>
-						<span>Basic <a href="biblio/basicBiblio.pdf">bibliography</a> about SDEs.</span>
+						<span>Basic <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/biblio/basicBiblio.pdf">bibliography</a> about SDEs.</span>
 					</div><br/><br/>
 					<div class="left smaller">
 						<div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html">Introduction to digital scholarly editions</a> by <span property="cc:attributionName">Elena Spadini</span><br/>(RISE Crash Course, 01.04.2022, University of Basel)<br/>is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a></div>
