fix attention slide

--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -124,15 +124,18 @@
 					<div class="small left">
 						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html" target="_blank">here</a>.<br/>
 							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/RISE_editions.pdf" target="_blank">here</a>.</p>
-							<p>
-						<b>Attention!</b>
+						
+						<div class="smaller">
+						<p>
+								<span style="font-weight: bold;">Attention!</span>
 						<br/>
+						
 						The presentation in HTML embeds many websites.
-						It takes sometime to load them all, some of them may not be available or blocked by your browser for security reasons.
-						When the content is not loaded yet or blocked, a blank slide will be displayed: follow the link in the previous slides to arrive to the same content. You can also disable the browser protection
-						(on this page only) and the content should appear (at least in Firefox).
-					</p>
-					<p>The PDF export does not embed websites, only includes links to them.</p>
+						It takes sometime to load them all, some of them may not be available or blocked by your browser for security reasons (served through HTTP instead of HTTPS protocol).
+						<span style="font-weight: bold;">When the content is not loaded yet or blocked, a blank slide will be displayed: follow the link in the previous slides to arrive to the same content.</span> You can also disable the browser protection
+						(on this page only!) and the content should appear: in Firefox, clicking on the person symbol to the left of the address bar, then on Connection secure and Disable; in Chrome, clicking on the locker to the left of the address bar, then allow Insecure content in the Site setting.
+						<br/>The PDF export have links to the websites and static images, instead of embedded content.</p>
+				</div>
 				</div>
 				</section>
 
