--- a/talks/20220401_editions_crashCourse/teiIntro.html
+++ b/talks/20220401_editions_crashCourse/teiIntro.html
@@ -91,6 +91,7 @@
 							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/teiIntro.pdf" target="_blank">here</a>.</p>
 							<p>
 				</div>
+				</section>
 
 
 
