--- a/talks/20220926_editions_GREN/20220926_editions_GREN.html
+++ b/talks/20220926_editions_GREN/20220926_editions_GREN.html
@@ -865,6 +865,14 @@
 					</div>
 				</section>
 
+				<section data-background-image="images/roud_page.png" data-background-size="contain"></section>
+				<section data-background-image="images/roud_geneticPanel.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/1929feuillets@2x.png" data-background-size="contain"></section>
+				
+				<section data-background-image="images/1941moissonneur@2x.png" data-background-size="contain"></section>
+
+
 				<section>
 					<div class="smaller">
 					<pre style="width:inherit;box-shadow: none;">
