--- a/io/index.html
+++ b/io/index.html
@@ -91,11 +91,11 @@
                 <br/>Switzerland
                 <br/>
 
-                <br/><span class="pubtitle">I currently work as a Research Navigator</span>, supporting projects of scholarly editing and digital libraries at the University of Basel.
-                Until 2021, I was a postdoc at the University of Lausanne, in charge of conception and development of <a href="https://roud.unil.ch/">"Gustave Roud, Textes & Archives"</a>. 
-				<br/><br/><span class="teachingtitle">I have previously been a Marie Skłodowska-Curie fellow in the ITN <a href="http://dixit.uni-koeln.de/">DiXiT</a></span> (Digital Scholarly Editions Initial Training), based at the Dutch Royal Academy of Arts and Sciences (Huygens Institute). <span class="studytitle">My education is in Romance Philology (bachelor, master, PhD) and Digital Humanities (master)</span> and I studied at Sapienza Università di Roma, Universidade Nova de Lisboa, École nationale des chartes.
+                <br/><span class="pubtitle">Research Navigator at the University of Basel</span> within the Research and Infrastructure Support (<a href="https://rise.unibas.ch/en/" target="_blank">RISE</a>) team, working with projects of scholarly editing and digital libraries.
+                Until 2021, postdoc at the University of Lausanne, in charge of the conception and the development of <a href="https://roud.unil.ch/">"Gustave Roud, Textes & Archives"</a> (online Feb 2023). 
+				<br/><br/><span class="teachingtitle">Previously Marie Skłodowska-Curie fellow in the ITN <a href="http://dixit.uni-koeln.de/">DiXiT</a></span> (Digital Scholarly Editions Initial Training), based at the Dutch Royal Academy of Arts and Sciences (Huygens Institute). <span class="studytitle">Education in Romance Philology (bachelor, master, PhD) and Digital Humanities (master)</span> at Sapienza Università di Roma, Universidade Nova de Lisboa, École nationale des chartes.
 
-                <br/><br/><span class="slidetitle">I have been teaching topics related to Digital Philology</span> and more in general Digital Humanities in a number of summer/winter schools and PhD programs in Switzerland, France, Italy, Netherlands, Greece.<br/><span class="ongoingtitle">As an active member of the DH community</span>, I've been part of the Executive Committee of the European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) from 2017 to 2020.
+                <br/><br/><span class="slidetitle">Instructor of Digital Philology</span> and more in general Digital Humanities in a number of summer/winter schools and PhD programs in Switzerland, France, Italy, Netherlands, Greece.<br/><span class="ongoingtitle">Active member of the DH community</span>, elected member of the Executive Committee of the European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) from 2017 to 2020.
 
             </div><!--/.home -->
 
@@ -118,25 +118,25 @@
                     <li>
                         <div>
                             <p>Avec Alessio Christen, <span class="slidetitle">Modelling the writing process</span>. Cracow, 12 June 2019 - <a href="http://genesis2019.confer.uj.edu.pl/" target="_blanche">Genesis</a>. 
-                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20190612_Krakow/20190612_Krakow.html#/" target="_blanche" role="button">View slides →</a></p>
+                            <a class="btn btn-outline-secondary" href="https://gustaveroudproject.github.io/talks/20190612_Krakow/20190612_Krakow.html#/" target="_blanche" role="button">View slides →</a></p>
                         </div>
                     </li>
                 	<li>
                         <div>
                             <p><span class="slidetitle">Which Resources for which Editions. Modelling the Relationships between Witnesses</span>. Lausanne, 3 June 2019 - <a href="https://wp.unil.ch/graphsde/">Workshop</a> on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies.
-                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20190603_graphSDE/20190603_graphSDE.html#/" target="_blanche" role="button">View slides →</a></p>
+                            <a class="btn btn-outline-secondary" href="https://gustaveroudproject.github.io/talks/20190603_graphSDE/20190603_graphSDE.html#/" target="_blanche" role="button">View slides →</a></p>
                         </div>
                     </li>
                 	<li>
                         <div>
                             <p>Avec Alessio Christen, <span class="slidetitle">Comment représenter et éditer une genèse ?</span>. Lausanne, 24 mai 2019 - Séminaire <i>Génétique des textes littéraires</i> de Rudolf Mahrer (UNIL). 
-                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html#/" target="_blanche" role="button">View slides →</a></p>
+                            <a class="btn btn-outline-secondary" href="https://gustaveroudproject.github.io/talks/20190524_seminaireGenetique/20190524_seminaireGenetique.html#/" target="_blanche" role="button">View slides →</a></p>
                         </div>
                     </li>
                 	<li>
                         <div>
                             <p><span class="slidetitle">« Une allée de rosiers et de digitales fleuries » : parcours dans l’édition des œuvres de Gustave Roud</span>. Lille, 2 mai 2019 - <a href="http://www.chartes.psl.eu/sites/default/files/atoms/files/programme_seminaire_europeen_ed_2mai_2019.pdf" target="_blank">Éditions savantes numériques : enjeux et réalisations.</a> Séminaire interdisciplinaire-européen et international de l'école doctorale. 
-                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20190502_Lille/20190502_Lille.html#/" target="_blanche" role="button">View slides →</a></p>
+                            <a class="btn btn-outline-secondary" href="https://gustaveroudproject.github.io/talks/20190502_Lille/20190502_Lille.html" target="_blanche" role="button">View slides →</a></p>
                         </div>
                     </li>
                 	<li>
