--- a/talks/20221207_corsoUnibo/20221207_corsoUnibo.html
+++ b/talks/20221207_corsoUnibo/20221207_corsoUnibo.html
@@ -418,7 +418,7 @@
 
 
 				<section>
-					esercizi. Download from xxx
+					Download materials for activities at<br/>https://doi.org/10.5281/zenodo.7408677
 				</section>
 
 
