--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -71,7 +71,7 @@
 				<section>
 					<h3><b>Introduction to<br/>Digital Scholarly Editions</b></h3>
 					<div class="smaller" style="text-align: left;background-color: #a5d7d2;padding:50px;margin:50px">
-						1.04.2022, RISE Crash course
+						RISE Crash course
 						<br/>
 						Elena Spadini
 						<!--
@@ -899,7 +899,7 @@ FAIR--></div>
 						<span>Basic <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/biblio/basicBiblio.pdf">bibliography</a> about SDEs.</span>
 					</div><br/><br/>
 					<div class="left smaller">
-						<div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html">Introduction to digital scholarly editions</a> by <span property="cc:attributionName">Elena Spadini</span><br/>(RISE Crash Course, 01.04.2022, University of Basel)<br/>is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a></div>
+						<div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html">Introduction to digital scholarly editions</a> by <span property="cc:attributionName">Elena Spadini</span><br/>(RISE Crash Course, University of Basel)<br/>is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0</a></div>
 						<div>
 							<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></div> 
 					</div>
