--- a/talks/20230426_atnu/index.html
+++ b/talks/20230426_atnu/index.html
@@ -72,6 +72,7 @@
 						<br/><br/><br/>
 						Elena Spadini (University of Basel)
 						<br/>
+						Materials available at <a href="https://doi.org/10.5281/zenodo.7867906">https://doi.org/10.5281/zenodo.7867906</a>
 					</div>
 				</section>
 				
@@ -173,10 +174,6 @@
 					</div>
 				</section>
 
-				<section>
-					<h3>Advantages of SW in editing</h3>
-				</section>
-
 <!-- ######################################################### -->
 <!-- ############    STATE OF THE ART     #################### -->
 <!-- ######################################################### -->
@@ -201,6 +198,8 @@
 					- Vespasiano da Bisticci 2013
 				-->
 
+				<img style="border:0px;box-shadow: none;" src="images/firstDecadeTimeline.jpg">
+<!--
 					<div style="position: relative; width: 100%; height: 0; padding-top: 46.5116%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -208,7 +207,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhJFRTKlM&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhJFRTKlM&#x2F;view?utm_content=DAFhJFRTKlM&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Beige Minimal Business Timeline Diagram Graph (860 × 400px)</a> by Elena
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhJFRTKlM&#x2F;view?utm_content=DAFhJFRTKlM&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Beige Minimal Business Timeline Diagram Graph (860 × 400px)</a> by Elena-->
 				</section>
 
 
@@ -876,7 +875,9 @@
 					<p>
 						Thank you.
 						<br/><br/>
-						<a href="biblio.pdf" target="_blank">Bibliography</a>
+						<a href="biblioSemanticEditions.pdf" target="_blank">Bibliography</a>
+						<br/><br/>
+						Slides: <a href="https://doi.org/10.5281/zenodo.7867906">https://doi.org/10.5281/zenodo.7867906</a>
 						<br/><br/>
 						elena.spadini@unibas.ch
 						<br/><br/>
