--- a/talks/20230607_aiucd/index.html
+++ b/talks/20230607_aiucd/index.html
@@ -73,6 +73,7 @@ sources: a case study</b></h3>
 						<br/><br/>
 						<span class="small">Thanks to the AIUCD2023 organisers, Bernard Comment and the Swiss Literary Archives</span>
 					</div>
+					<div><a href="https://doi.org/10.5281/zenodo.8012000"><img width="30%" style="border:0px" src="https://zenodo.org/badge/DOI/10.5281/zenodo.8012000.svg" alt="DOI"></a></div>
 				</section>
 				
 
@@ -255,7 +256,7 @@ sources: a case study</b></h3>
 					<div class="quote">The social challenges are where textual scholars can play a leadership role in literary studies and the preservation of born digital literary material, helping to ensure that <b>documents and records survive in useful as well as usable form</b>, just as textual scholars have long fulfilled advocacy roles in traditional library settings</div>
 					<div class="source">Kirschenbaum and Reside 2013, see also Carbé 2023, Gooding et al 2019, Ries and Palkó 2019</div>
 					<br/><br/>
-					<h4 class="fragment">Ask <b>questions</b> to born-digital sources and hybrid archives as object of study</h4>
+					<h4 class="fragment">Ask <b>questions</b> to born-digital sources and hybrid archives as objects of study</h4>
 
 					<!--memory institutions already today have to decide according to which standards and criteria to select relevant materials. They have to decide which aspects of digital objects and their contexts are relevant to future research and have to be preserved in order to achieve an authentically preserved record, and what would be acceptable loss. (Ries and Palkó 2019) -->
 
