--- a/talks/20230803_bern/20230803_bern.html
+++ b/talks/20230803_bern/20230803_bern.html
@@ -2,15 +2,19 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-		<title>SDE</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="../reveal/css/reveal.css">
-		<link rel="stylesheet" href="../reveal/css/theme/white.css">
+		<link rel="stylesheet" href="../reveal/dist/reset.css">
+		<link rel="stylesheet" href="../reveal/dist/reveal.css">
+		<link rel="stylesheet" href="../reveal/dist/theme/white.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
+		<link rel="stylesheet" href="plugin/highlight/zenburn.css">
+
+		<title>SDE</title>
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -21,14 +25,7 @@
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
-		<script>
-			Reveal.initialize({
-					// More info https://github.com/hakimel/reveal.js#dependencies
-					dependencies: [
-						{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					]
-				});
-		</script>
+		
 
 		<style>
 			div.quote {font-size: 0.7em; margin-bottom: 1.5em; margin-top:1.5em;}
@@ -68,11 +65,10 @@
 							
 				
 				<section>
-					<h3><b>Modelli e contesti per una filologia digitale</b></h3>
+					<h3><b>Introduzione alle edizioni digitali</b></h3>
 					<br/>
 					<div class="small" style="text-align: left">
-						Sapienza Università di Roma, 25 novembre 2022
-						<br/>Dottorato in Italianistica
+						Università di Berna, 3 agosto 2023
 						<br/><br/><br/>
 						Elena Spadini (Università di Basilea)
 						<br/>
@@ -851,36 +847,36 @@ succedendo in quel casamento</li>
 				<section><b>4.16. Utilizzo a lungo termine</b>. Quali sono le prospettive dell’EDS per un suo utilizzo a lungo termine? L’edizione è conclusa o è in fieri (e necessita quindi di ulteriori modifiche e di aggiunte)? Esiste un supporto istituzionale che si prenda cura dell’edizione e della sua sostenibilità? I basic data sono archiviati? Esiste un progetto per garantire un accesso duraturo all’edizione?</section>
 
 
+</div>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-		<script src="../reveal/lib/js/head.min.js"></script>
-		<script src="../reveal/js/reveal.js"></script>
-
+<script src="../reveal/dist/reveal.js"></script>
+		<script src="../reveal/plugin/zoom/zoom.js"></script>
+		<script src="../reveal/plugin/notes/notes.js"></script>
+		<script src="../reveal/plugin/search/search.js"></script>
+		<script src="../reveal/plugin/markdown/markdown.js"></script>
+		<script src="../reveal/plugin/highlight/highlight.js"></script>
 		<script>
-			// More info https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				history: true,
 
-				// More info https://github.com/hakimel/reveal.js#dependencies
-				dependencies: [
-					{ src: '../reveal/plugin/markdown/marked.js' },
-					{ src: '../reveal/plugin/markdown/markdown.js' },
-					{ src: '../reveal/plugin/notes/notes.js', async: true },
-					{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
+			// Also available as an ES module, see:
+			// https://revealjs.com/initialization/
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				center: true,
+				hash: true,
+
+				// Learn about plugins: https://revealjs.com/plugins/
+				plugins: [ RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight ]
 			});
+
 		</script>
+
+
+
+
+
 	</body>
 </html>
