--- a/talks/20230803_bern/20230803_bern.html
+++ b/talks/20230803_bern/20230803_bern.html
@@ -96,18 +96,15 @@
  					<ol style="font-size: 0.9em">
  						<li>Premessa: come funziona un progetto digitale</li>
  						<li>Edizione digitale</li>
-						 <li>Form and content
-						 <ol>
-							 <li>Multiple forms</li>
-							 <li>Multiple contents</li>
-						 </ol></li>
-					 <li>Beyond the print paradigm
-						 <ol>
-							 <li>Beyond formal limits</li>
-							 <li>Beyond content limitations</li>
-						 </ol></li>
- 						<li>Criteri per la recensione di edizioni digitali</li>
- 						<li>Paradigma digitale, filologia digitale</li>
+						<li>Features and examples
+							<ul>
+								<li>Form and content</li>
+								<li>Beyond the print paradigm</li>
+								<li>Data and data visualisation</li>
+								<li>Single vs multiple witnesses</li>
+							</ul>
+						</li>
+ 						<li>Criteri per la recensione (e la pianificazione) di edizioni digitali</li>
  					</ol>
  				</section>
 
@@ -120,9 +117,12 @@
 	##################################################################################################################################
 	################################################################################################################################ -->
 
+				<section data-background-color="tomato">
+					<h3>Come funziona un progetto digitale</h3>
+				</section>
+
 				<section>
- 					<h3>Come funziona un progetto digitale?</h3>
-					<img src="images/DHprojectComponents.png"/>
+ 					<img src="images/DHprojectComponents.png"/>
 					<br/><br/>
 					<div class="source">Drucker 2021</div>
 				</section>
@@ -281,7 +281,7 @@
 			<section data-background-iframe="https://editiot.finlit.fi/exist/apps/gottlund/index.html" data-background-interactive></section>
 
 			<section data-background-color="tomato">
-				<h3>3.<br/>Beyond the print paradigm</h3>
+				<h3>Beyond the print paradigm</h3>
 			</section>
 
 			<section>
@@ -289,8 +289,8 @@
 			   <div class="source">a catalog of Digital Scholarly Editions, edited by Patrick Sahle et al.</div>
 		   </section>
 
-		   <section data-background-color="tomato">
-			<h3>3.1.<br/>Beyond formal limits</h3>
+		   <section>
+			<h3>Beyond formal limits</h3>
 			</section>
 
 		   <section>
@@ -314,8 +314,8 @@
 			-->
 		   
 
-		   <section data-background-color="tomato">
-				<h3>3.2.<br/>Beyond content limitations</h3>
+		   <section>
+				<h3>Beyond content limitations</h3>
 			</section>
 
 
@@ -335,7 +335,7 @@
 
 
 		   <section data-background-color="tomato">
-			<h3>4.<br/>Data!</h3>
+			<h3>Data!</h3>
 		</section>
 
 	   
