--- a/talks/20230803_bern/20230803_bern.html
+++ b/talks/20230803_bern/20230803_bern.html
@@ -697,7 +697,7 @@ intenderà servirsi in una certa ricerca</div>
 				<section>
 					<h3>Formati e dati</h3>
 					<div class="left small">
-						<b>4.11. cartaceo (o altro formato) + digitale<br/>
+						<b>4.11. Cartaceo (o altro formato) + digitale<br/>
 						4.12. Accesso ai dati<br/>
 						4.13. Diritti e licenze</b></div>
 						<div class="source">RIDE Criteria</div>
