--- a/talks/a_editions/editions.html
+++ b/talks/a_editions/editions.html
@@ -112,9 +112,8 @@
 
 				<section>
 					<div class="small left">
-						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html" target="_blank">here</a>.<br/>
-							Download it in PDF <a href="https://raw.githubusercontent.com/elespdn/elespdn.github.io/master/talks/20220401_editions_crashCourse/pdfExport/RISE_editions.pdf" target="_blank">here</a>.</p>
-						
+						<p>This presentation is available in HTML <a href="https://elespdn.github.io/talks/a_editions/editions.html" target="_blank">here</a>.
+							
 						<div class="smaller">
 						<p>
 								<span style="font-weight: bold;">Attention!</span>
